--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
           "email": "kartik@kartikt.com"
         }
     ],
+    "minimum-stability": "1.0.0.0",
     "require": {
         "php": ">=5.4",
         "guzzlehttp/guzzle": "~6.0"
