--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": ">=6.0"
     },
     "autoload": {
         "psr-4": {
