--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "lanlin/nylas-php",
+    "name": "sumacrm/nylas-php",
     "description": "PHP wrapper for the Nylas API (Adapted for lanlin).",
     "license": "MIT",
     "authors" : [
         {
-          "name": "lanlin",
-          "email": "lanlin1987@gmail.com"
+          "name": "SumaCRM",
+          "email": "info@sumacrm.com"
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=5.6",
         "guzzlehttp/guzzle": ">=6.0"
     },
     "autoload": {
